feat: add delete goal function
